# corgi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SparseGrid.h  cell.h  cellular_automata.h  cmakelists.txt  common.h  communication.h  corgi.c++  corgi.h  fwd_corgi.h  internals.h  makefile  tags.h  tile.h
examples/game-of-life/: CMakeLists.txt  gol.c++  gol.h  mpi_sim.py  pygol.c++  simulation.py
examples/loadbalance/: analyze.py  clusters.py  graph.py  graph2.py  merge_output.py  plot_node.py  plot_node2.py  sim.py  sim3d.py
examples/loadbalance/jobs/: merge.sh  run.sh  run2.sh
examples/particles/: CMakeLists.txt  communication.h  container.c++  container.h  mpi_sim.py  prtcls.c++  prtcls.h  pyprtcls.c++  wrap.h
geometry/: distance.h  utilities.h
prototypes/: corgi.py  loadbalance.py  loadbalance_test.py  mpi_test.py
pycorgi/: CMakeLists.txt  cmakelists.txt  corgi.c++  corgi.py  main.c++  makefile  pycorgi.c++
python/: main.c++
src/: CMakeLists.txt
src/corgi/: cellular_automata.h  corgi.h  internals.h  tags.h  tile.h
src/corgi/geometry/: distance.h  utilities.h
src/corgi/toolbox/: frequency.h  sparse_grid.h  unstable_remove.h
tests/: CMakeLists.txt  bindings.c++  cmakelists.txt  corgitest.c++  corgitest.h  example.c++  example.h  factorial.c++  factorial.h  makefile  pycorgitest.c++  simulation.c++  simulation.h  test_ca.py  test_cell.py  test_example.py  test_inits.py  test_loadbalancing.py  test_node.py  test_pairwise_moore_communication.py  test_tile.py  tests-factorial.c++  tests-main.c++
toolbox/: SparseGrid.h  array.h  dataContainer.h  sparse_grid.h
